<resources>
    <string name="app_name">Hospital Management System</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_format">08012345678</string>
    <string name="contact_address">Contact Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="genotype">Genotype</string>
    <string name="next_kin">Next of Kin</string>
    <string name="blood_group">Blood Group</string>
    <string name="kin_relationship">Relationship to Patient</string>
    <string name="kins_phone_number">Kin\'s Phone Number</string>
    <string name="date_format">12-Dec-1980</string>
    <string name="patient_name">Patient Name</string>
    <string name="add_patient">Add Patient</string>

    <string name="select">-Select-</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="genotype_AA">AA</string>
    <string name="genotype_AS">AS</string>
    <string name="genotype_SS">SS</string>
    <string name="genotype_AC">AC</string>
    <string name="genotype_CC">CC</string>
    <string name="genotype_SC">SC</string>
    <string name="group_A_positive">A +ve</string>
    <string name="group_A_negative">A -ve</string>
    <string name="group_B_positive">B +ve</string>
    <string name="group_B_negative">B -ve</string>
    <string name="group_O_positive">O +ve</string>
    <string name="group_O_negative">O -ve</string>
    <string name="group_AB_positive">AB +ve</string>
    <string name="group_AB_negative">AB -ve</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="settings">Settings</string>
    <string name="staff">Staff</string>
    <string name="patients">Patients</string>
    <string name="consultation">Consultation</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="finance">Finance</string>
    <string name="procurement">Procurement</string>
    <string name="feedback">Feedback</string>
    <string name="app_info">App Info</string>
    <string name="help">Help</string>
    <string name="counter">0</string>
    <string name="item_selected"> item selected</string>
    <string name="items_selected"> items selected</string>
</resources>
