<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.PatientEditorFragment">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_first_name"
                style="@style/PatientEditor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/et_first_name"
                    style="@style/PatientEditor"
                    android:hint="@string/first_name"
                    android:inputType="textCapWords|textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_last_name"
                style="@style/PatientEditor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_first_name">

                <EditText
                    android:id="@+id/et_last_name"
                    style="@style/PatientEditor"
                    android:hint="@string/last_name"
                    android:inputType="textCapWords|textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_phone"
                style="@style/PatientEditor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_last_name">

                <EditText
                    android:id="@+id/et_phone"
                    style="@style/PatientEditor"
                    android:hint="@string/phone_number"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_address"
                style="@style/PatientEditor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_phone">

                <EditText
                    android:id="@+id/et_address"
                    style="@style/PatientEditor"
                    android:hint="@string/contact_address"
                    android:inputType="textCapWords|textPostalAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_dob"
                style="@style/PatientEditor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_address">

                <EditText
                    android:id="@+id/et_dob"
                    style="@style/PatientEditor"
                    android:hint="@string/date_of_birth"
                    android:inputType="date" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/layout_gender"
                style="@style/PatientEditor.LinearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_dob">

                <TextView
                    style="@style/PatientEditor.TextView"
                    android:text="@string/gender" />

                <Spinner
                    android:id="@+id/spinner_gender"
                    style="@style/PatientEditor.Spinner" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_genotype"
                style="@style/PatientEditor.LinearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_gender">

                <TextView
                    style="@style/PatientEditor.TextView"
                    android:text="@string/genotype" />

                <Spinner
                    android:id="@+id/spinner_genotype"
                    style="@style/PatientEditor.Spinner" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_blood_group"
                style="@style/PatientEditor.LinearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_genotype">

                <TextView
                    style="@style/PatientEditor.TextView"
                    android:text="@string/blood_group" />

                <Spinner
                    android:id="@+id/spinner_blood_group"
                    style="@style/PatientEditor.Spinner" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_next_kin"
                style="@style/PatientEditor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_blood_group">

                <EditText
                    android:id="@+id/et_next_kin"
                    style="@style/PatientEditor"
                    android:hint="@string/next_kin"
                    android:inputType="textCapWords|textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_kin_relationship"
                style="@style/PatientEditor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_next_kin">

                <EditText
                    android:id="@+id/et_kin_relationship"
                    style="@style/PatientEditor"
                    android:hint="@string/kin_relationship"
                    android:inputType="textCapWords|textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_kin_phone"
                style="@style/PatientEditor"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_kin_relationship">

                <EditText
                    android:id="@+id/et_kin_phone"
                    style="@style/PatientEditor"
                    android:hint="@string/kins_phone_number"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</LinearLayout>