<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    app:cardElevation="@dimen/dimen_5dp"
    android:layout_margin="@dimen/dimen_5dp"
    app:contentPadding="@dimen/dimen_5dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_patient_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_5dp"
            android:text="@string/patient_name"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_male"
            android:padding="@dimen/dimen_5dp"
            app:layout_constraintEnd_toStartOf="@id/tv_dob"
            app:layout_constraintStart_toEndOf="@id/tv_patient_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_5dp"
            android:text="@string/date_format"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_5dp"
            android:text="@string/phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_gender" />

        <TextView
            android:id="@+id/tv_genotype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_5dp"
            android:text="@string/genotype_AA"
            app:layout_constraintEnd_toStartOf="@id/tv_blood_group"
            app:layout_constraintStart_toEndOf="@id/tv_phone"
            app:layout_constraintTop_toBottomOf="@id/tv_gender" />

        <TextView
            android:id="@+id/tv_blood_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_5dp"
            android:text="@string/group_A_positive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_gender" />
        <CheckBox
            android:id="@+id/select_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>